rds.tf
resource "aws_db_subnet_group" "db_group" {
   name = "main"
   subnet_ids = [ aws_subnet.pvtsub1.id , aws_subnet.pvtsub2.id ]

   tags = {
     Name = "My DB Subnet Group"
   }
}

resource "aws_db_instance" "default" {
  allocated_storage = 10
  db_name = "mydb"
  engine = "mysql"
  engine_version = "8.0"
  instance_class = "db.t3.micro"
  username = "dbadmin"
  password = "mysqlpassword"
  parameter_group_name = "default.mysql8.0"
  skip_final_snapshot = true
  db_subnet_group_name = aws_db_subnet_group.db_group.name
  vpc_security_group_ids = [aws_security_group.rds_sg.id]
}
